# CoronaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CoronaEditor.ini  README.md  TaskSplitting.md  Untitled.md  implementation.md
.claude/: settings.local.json
assets/shaders/: actor_pick.comp.glsl  composite.comp.glsl  debug_resolve.comp.glsl  imgui.vert.glsl  lighting.comp.glsl  optics_composite.comp.glsl  optics_cursor.comp.glsl  optics_overlay.comp.glsl  optics_ui_warp.comp.glsl  test.vert.glsl  visibility.vert.glsl  vision_resolve.comp.glsl
docs/: AI_Agent交互突击方案.md  AI_FRONTEND_CHAIN_AND_CAI_GENERALIZATION_cn.md  AI场景生成链路整理清理记录.md  ARCHITECTURE_MAP_cn.md  Agent架构方案.md  BGM场景配乐开发计划.md  CABBAGE_EDITOR_MERGE_CHECKLIST_cn.md  CAPABILITY_STATUS_cn.md  CHANGELOG_scene_assembly_v2.md  Codex攻坚修改记录.md  DATA_FLOW_OVERVIEW_cn.md  DUAL_SCRIPT_THREE_LAYER_ARCHITECTURE_cn.md  F5测试轮次_项目链路使用说明书.md  F5运行复盘记录.md  ISSUES_AND_RECOMMENDATIONS_cn.md  LANChat_AI_使用说明.md  M2-F5开放场景验收清单.md  ONE_PAGE_OVERVIEW_cn.md  PROJECT_SUMMARY_cn.md  PYTHON_API_STORAGE_MAPPING_cn.md  QUICK_START_cn.md  SCENE_OCTREE_CULLING_LRU_TODO_cn.md  SOURCE_INDEX_cn.md  SYSTEMS_OVERVIEW_cn.md  V3今晚F5验收清单.md  V3今晚收尾变更清单.md  VUE_WINDOW_MANAGEMENT_DESIGN_cn.md  ai-generation-scheduler-plan.md  handover_vision_integration.md  resume_project.md  scene_assembly_agent_plan.md  scene_assembly_v2_assessment.md  scene_assembly_v2_changelog.md  scene_assembly_v2_final_plan.md  scene_assembly_v2_run_analysis.md  vision_integration.md  单人多Agent_F5验收手册.md  后续计划_渐进式与用户介入.md  复杂人机交互链路稳定化改进方案.md  多人多Agent_F5验收手册.md  (+6 more)
docs/editor/: AI_FRONTEND_CHAIN_AND_CAI_GENERALIZATION_cn.md  CABBAGE_EDITOR_MERGE_CHECKLIST_cn.md  CAI_API_REFERENCE.md  fix_media_url_leak.md  session_tracking_implementation.md
docs/planning/: MEMORY.md  VISION_INTEGRATION_MINIMAL_PLAN_cn.md  session_handover.md
editor/: .gitignore  README.md  main.py
models/: database.db
modules/corona_resource/: .gitignore  CMakeLists.txt  README.md
modules/corona_resource/cmake/: CoronaResourceCompiler.cmake  CoronaResourceDependencies.cmake  CoronaResourceExamples.cmake  CoronaResourceFFmpeg.cmake  CoronaResourceOptions.cmake  CoronaResourceUSD.cmake
modules/corona_resource/docs/: USAGE_EXAMPLE.md
modules/corona_resource/examples/: CMakeLists.txt
modules/corona_resource/examples/image_example/: CMakeLists.txt  image_example.cpp
modules/corona_resource/examples/lod_example/: CMakeLists.txt  lod_example.cpp
modules/corona_resource/examples/lru_cache_example/: CMakeLists.txt  lru_cache_example.cpp  lru_cache_example.h  main.cpp
modules/corona_resource/examples/scene_example/: CMakeLists.txt  scene_example.cpp
modules/corona_resource/include/corona/resource/: parser_registry.h  resource.h  resource_cache.h  resource_manager.h
modules/corona_resource/include/corona/resource/types/: animation.h  audio.h  binary.h  image.h  json.h  model.h  scene.h  text.h  video.h
modules/corona_resource/include/corona/scene/desc/: common.h  graph_desc.h  integrator_desc.h  json_helper.hpp  material_desc.h  node_desc.h  output_desc.h  pipeline_desc.h  sampler_desc.h  scene_desc.h  scene_element_desc.h  shader_desc_s.h  transform_desc.h
modules/corona_resource/include/corona/scene/importer/: i_importer.hpp  json_importer.hpp
modules/corona_resource/src/: CMakeLists.txt
modules/corona_resource/src/resource/: CMakeLists.txt  parser_registry.cpp  resource.cpp  resource_cache.cpp  resource_manager.cpp
modules/corona_resource/src/resource/types/: animation.cpp  audio.cpp  binary.cpp  image.cpp  json.cpp  model.cpp  parse_assimp.h  parse_common.h  parse_usd.h  scene.cpp  text.cpp  video.cpp
modules/corona_resource/src/scene/: CMakeLists.txt
modules/corona_resource/src/scene/desc/: common.cpp  graph_desc.cpp  integrator_desc.cpp  material_desc.cpp  node_desc.cpp  output_desc.cpp  pipeline_desc.cpp  sampler_desc.cpp  scene_desc.cpp  scene_element_desc.cpp  shader_node_desc.cpp  slot_desc.cpp  transform_desc.cpp
modules/corona_resource/tests/: CMakeLists.txt  README.md  test_resource_manager.cpp
src/: CMakeLists.txt  engine.cpp  shared_data_hub.cpp
src/kernel/: CMakeLists.txt
src/kernel/core/: kernel_context.cpp
src/kernel/event/: event_bus.cpp  event_stream.cpp
src/kernel/system/: system_base.cpp  system_manager.cpp
src/systems/geometry/: CMakeLists.txt  frustum.cpp  geometry_internal.h  geometry_system.cpp
src/systems/geometry/tests/: test_editor_temporary_actor_bounds.cpp
src/systems/network/: CMakeLists.txt  discovery.cpp  lanchat_history_store.cpp  lanchat_state.cpp  network_system.cpp  peer_manager.cpp  sync_engine.cpp
src/systems/network/tests/: test_network_protocol.cpp
src/systems/optics/: CMakeLists.txt  hardware.h  optics_system.cpp
src/systems/optics/tests/: test_vision_geometry_gpu_resource.cpp  test_vision_material_adapter.cpp  test_vision_pipeline_key.cpp  test_vision_render_mode_config.cpp  test_vision_scene_resource.cpp
src/systems/optics/vision/: vision_camera_adapter.cpp  vision_camera_adapter.h  vision_geometry_adapter.cpp  vision_geometry_adapter.h  vision_light_adapter.cpp  vision_light_adapter.h  vision_material_adapter.cpp  vision_material_adapter.h  vision_output_bridge.cpp  vision_output_bridge.h  vision_render_mode_config.cpp  vision_render_mode_config.h  vision_zero_copy_bridge.cpp  vision_zero_copy_bridge.h
src/systems/ui/: CMakeLists.txt  camera_viewport_manager.cpp  cursor_3d_manager.cpp  cursor_3d_manager.h  cursor_3d_math.cpp  cursor_3d_math.h  imgui_system.cpp  viewport_gizmo_manager.cpp
src/systems/ui/cef/: browser_manager.cpp  browser_manager.h  browser_ui.cpp  browser_ui.h  cef_bridge_helpers.h  cef_client.cpp  cef_client.h  cef_py_bind.cpp  cef_query_bridge.cpp  cef_realtime_bridge.cpp
src/systems/ui/imgui/: editor_settings.cpp  editor_settings.h  imgui_ui.cpp  imgui_ui.h
src/systems/ui/sdl/: sdl_utils.cpp  sdl_utils.h
src/systems/ui/tests/: test_cursor_3d_ray_surface.cpp
src/systems/ui/vue_settings/: editor_settings.html
src/systems/ui/vulk/: browser_manager_vulkan.cpp  vulkan_backend.cpp
(+467 files in other folders)
