# =============================================================================
# CoronaResource Examples
# =============================================================================

# Add example subdirectories
add_subdirectory(scene_example)
add_subdirectory(image_example)
add_subdirectory(lru_cache_example)
add_subdirectory(lod_example)
